# boiler-drf-react-postgres

./: .env.database.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  boiler.code-workspace  docker-compose.prod.yml  docker-compose.yml  internhub.code-workspace
backend/: .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: manage.py  pyproject.toml  utils.py
backend/src-back/: manage.py  pyproject.toml
backend/src-back/_conf/: logger.py  settings.py  urls.py  wsgi.py
backend/src-back/authentification/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/src-back/authentification/management/commands/: populate_fake_data.py
backend/src-back/authentification/migrations/: 0001_initial.py
backend/src/_conf/: logger.py  settings.py  urls.py
backend/src/authentication/: admin.py  factories.py  models.py  permissions.py  tests.py  urls.py  urlsusers.py  views.py
backend/src/authentication/management/commands/: get_admin_token.py  populate_fake_data.py
backend/src/authentication/migrations/: 0001_initial.py
backend/src/authentification/: admin.py  models.py  serializers.py  tests.py  urls.py  urlsusers.py  views.py
backend/src/authentification/management/commands/: get_admin_token.py  populate_fake_data.py
backend/src/authentification/migrations/: 0001_initial.py
backend/src/boiler/: typing.py
backend/src/mails/: sendgrid.py  tests.py
backend/src/mails/templates/mails/: signup.html
frontend/: .env.example  .eslintrc.cjs  .prettierrc.cjs  Dockerfile  Dockerfile.dev  bun.lockb  bunfig.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: create-service-account.sh
(+39 files in other folders)
