[project]
name = "boiler-drf-react-postgres-backend"
description = "Boilerplate Django REST Framework backend for a React frontend with a PostgreSQL database."
version = "2020.0.0"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "django",
    "djangorestframework",
    "psycopg2-binary",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "drf-yasg",
    "sendgrid",
    "python-dotenv",
    "ptpython",
    "django-extensions",
    "gunicorn",
]

    [project.optional-dependencies]
    static-typing = [
        "mypy",
        "django-stubs[compatible-mypy]",
        "djangorestframework-stubs[compatible-mypy]",
    ]
    tests = ["factory-boy"]
    code-quality = ["djlint", "ruff"]

[tool.mypy]
exclude                = [".venv", "migrations"]
ignore_missing_imports = true
python_version         = "3.12"
strict_optional        = true
plugins                = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "_conf.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "_conf.settings"
python_files           = ["*/test*.py"]

[tool.ruff]
exclude        = ["_env", "migrations"]
line-length    = 120
target-version = "py312"
src            = ["./src"]

    [tool.ruff.lint]
    ignore = [
        "D100",
        "D101",
        "D102",
        'D103',
        "D104",
        "D105",
        "D106",
        "D107",
        "D203",
        "D212",
        "ANN002",
        "ANN003",
        "ANN101",
        "ARG002",
        "PGH003",
        "PT009",
        "COM812",
        "ISC001",
        "RUF012",
        "TRY003",
        "G004",
        "EM101",
        "FBT001",
    ]
    select = ["ALL"]
